Repair grid for technologies on mobile

--- a/styles.css
+++ b/styles.css
@@ -32,13 +32,18 @@ h1, h2 {
 
 h2 {
     font-size: 1.8rem;
-    padding: 0.5rem 2rem;
+    padding: 0.5rem 1rem;
     margin: 2rem auto;
     border-bottom: 1px solid;
 }
 
+h3 {
+    font-size: 1.1rem;
+}
+
 p {
     text-align: justify;
+    line-height: 1.35rem;
 }
 
 section {
@@ -197,14 +202,16 @@ footer {
 
 #technologies div {
     display: flex;
-    justify-content: space-evenly;
-    padding: 2rem 0;
+    justify-content: space-between;
+    padding: 1rem;
 }
 
 #technologies div div {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     text-align: center;
+    padding: 0 0 1rem 0;
 }
 
 #technologies div div>i {
@@ -287,12 +294,29 @@ footer {
 #about article {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-    padding: 2rem 0;
+    align-items: flex-start;
+}
+
+#about h2 {
+    width: 100%;
+    margin: 0 auto 2rem auto;
     box-sizing: border-box;
 }
 
+#about h3 {
+    padding: 2rem 0 1rem 0;
+}
+
+#about ul {
+    list-style-position: inside;
+    list-style-type: circle;
+    display: inline;
+}
+
+#about ul>li {
+    padding: 0.5rem 0;
+    /* display: inline-block; */
+}
 .textBox {
     position: relative;
     width: 222%;
@@ -633,7 +657,8 @@ footer {
         display: grid;
         grid-template-rows: repeat(2, 10rem);
         grid-template-columns: repeat(6, 1fr);
-        grid-gap: 1rem
+        grid-gap: 1rem;
+        padding: 0;
     }
 
     #technologies div>div {
@@ -642,6 +667,11 @@ footer {
 
     #technologies div div:nth-child(4) {
         grid-area: 2/2/3/4;
+    }
+
+    #technologies div div>i {
+        font-size: 5rem;
+        padding-bottom: 0.5rem;
     }
 
     #projectsGallery {
